[package]
name = "map-name-game"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.71"
axum = "0.6.18"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.4", features = ["trace", "fs"] }
tower = "0.4.13"
#csv = "1.2.2"
#reqwest = { version = "0.11.18", features = ["json"] }
#serde = { version = "1.0.164", features = ["derive"] }
#serde_json = "1.0.97"
